--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -77,7 +77,7 @@
                 <div class="row align-items-center">
                     <div class="col-6 col-md-3">
                         <a href="/" class="h2 mb-0">
-                                                <span class="mb-0 site-logo"><span>V2ray Node</span></span>
+                                                <span class="mb-0 site-logo"><span>V2ray 节点每日更新</span></span>
                                                 </a>
                     </div>
                     <div class="col-12 col-md-9 d-none d-xl-block">
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-clash-v2ray-ss-ssr.htm" title="「8月29日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「8月29日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-clash-v2ray-ss-ssr.htm" title="「8月30日」最高速度19.1M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月30日」最高速度19.1M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-v2ray-subscribe.htm" title="「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-subscribe-node.htm" title="「8月19日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月19日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-node-subscribe.htm" title="「8月24日」最高速度23M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月24日」最高速度23M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-node-subscribe.htm" title="「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月31日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-23-node-share-links.htm" title="「8月23日」最高速度19.7M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「8月23日」最高速度19.7M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-free-v2ray-subscribe.htm" title="「8月13日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月13日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-9-free-subscribe-node.htm" title="「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-shadowrocket-node.htm" title="「9月17日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月17日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-18-clash-v2ray-ss-ssr.htm" title="「8月18日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月18日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray-subscribe.htm" title="「8月22日」最高速度19M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「8月22日」最高速度19M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-subscribe-node.htm" title="「8月21日」最高速度18.3M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月21日」最高速度18.3M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share.htm" title="「8月6日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「8月6日」最高速度18.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-clash-v2ray-ss-ssr.htm" title="「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-v2ray-ss-ssr.htm" title="「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
