--- a/free-nodes/2025-9-8-clash-v2ray-ss-ssr.htm
+++ b/free-nodes/2025-9-8-clash-v2ray-ss-ssr.htm
@@ -79,7 +79,7 @@
                 <div class="row align-items-center">
                     <div class="col-6 col-md-3">
                         <a href="/" class="h2 mb-0">
-                                                <span class="mb-0 site-logo"><span>V2ray Node</span></span>
+                                                <span class="mb-0 site-logo"><span>V2ray 节点每日更新</span></span>
                                                 </a>
                     </div>
                     <div class="col-12 col-md-9 d-none d-xl-block">
@@ -169,16 +169,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-subscribe-node.htm" title="「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="「8月14日」最高速度20.3M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月14日」最高速度20.3M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-17-clash-v2ray-ss-ssr.htm" title="「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-subscribe-node.htm" title="「8月19日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月19日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share-links.htm" title="「8月4日」最高速度20.9M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月4日」最高速度20.9M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-high-speed-nodes.htm" title="「8月26日」最高速度21.9M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「8月26日」最高速度21.9M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-free-subscribe-node.htm" title="「8月25日」最高速度21.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「8月25日」最高速度21.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-node-share-links.htm" title="「8月27日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月27日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-node-subscribe.htm" title="「8月12日」最高速度20.1M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月12日」最高速度20.1M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-clash-v2ray-ss-ssr.htm" title="「8月28日」最高速度22M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「8月28日」最高速度22M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="「8月9日」最高速度19.6M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月9日」最高速度19.6M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-node-share.htm" title="「9月6日」最高速度19.7M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月6日」最高速度19.7M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-30-clash-v2ray-ss-ssr.htm" title="「8月30日」最高速度19.1M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月30日」最高速度19.1M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-node-share.htm" title="「8月11日」最高速度22.7M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「8月11日」最高速度22.7M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-clash-v2ray-ss-ssr.htm" title="「9月11日」最高速度21M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「9月11日」最高速度21M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月10日」最高速度22.5M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-shadowrocket-node.htm" title="「9月17日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月17日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +190,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
