--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -77,7 +77,7 @@
                 <div class="row align-items-center">
                     <div class="col-6 col-md-3">
                         <a href="/" class="h2 mb-0">
-                                                <span class="mb-0 site-logo"><span>V2ray Node</span></span>
+                                                <span class="mb-0 site-logo"><span>V2ray 节点每日更新</span></span>
                                                 </a>
                     </div>
                     <div class="col-12 col-md-9 d-none d-xl-block">
@@ -523,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-node-share-links.htm" title="「9月1日」最高速度22.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「9月1日」最高速度22.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-free-node-subscribe-links.htm" title="「9月5日」最高速度19.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月5日」最高速度19.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-node-share.htm" title="「8月16日」最高速度19M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月16日」最高速度19M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-27-node-share-links.htm" title="「8月27日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月27日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-v2ray-subscribe.htm" title="「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share.htm" title="「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-9-free-subscribe-node.htm" title="「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月9日」最高速度18.6M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-clash-v2ray-ss-ssr.htm" title="「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-clash-v2ray-ss-ssr.htm" title="「9月11日」最高速度21M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「9月11日」最高速度21M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-free-node-subscribe-links.htm" title="「9月2日」最高速度18M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月2日」最高速度18M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-v2ray-ss-ssr.htm" title="「8月5日」最高速度19.8M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「8月5日」最高速度19.8M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-clash-node-daily-updates.htm" title="「9月16日」最高速度22.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「9月16日」最高速度22.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-free-node-subscribe.htm" title="「8月12日」最高速度20.1M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「8月12日」最高速度20.1M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-node-subscribe.htm" title="「8月14日」最高速度20.3M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月14日」最高速度20.3M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-20-free-node-subscribe-links.htm" title="「8月20日」最高速度20.4M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「8月20日」最高速度20.4M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-free-node-subscribe-links.htm" title="「9月5日」最高速度19.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「9月5日」最高速度19.9M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-v2ray-subscribe.htm" title="「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月7日」最高速度22M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -544,7 +544,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
